# Novabot

./: .dockerignore  .easignore  .env.example  .gitignore  API.md  CLAUDE.md  COnsoleLog.txt  ConsoleLogMower.txt  Dockerfile  FIRMWARE-MOWER.md  MAP-SYNC.md  MOWER-INTERNALS.md  Novabot-Local.pklg  Novabot-Mower-cloud.pklg  Novabot-Mower.pklg  Novabot.pklg  OTA.md  README.md  SESSIONS.md  docker-compose.linux.yml  docker-compose.wiki.yml  docker-compose.yml  docker-entrypoint.sh  mkdocs-public.yml  mkdocs.yml  release.sh
.claude/: settings.local.json
app/: .easignore  .gitignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
bootstrap/: .mqtt_addr  build.sh  package-lock.json  package.json  tsconfig.json
bootstrap/src-tauri/: Cargo.toml  Info.plist  inject-plist.sh  tauri.conf.json
bootstrap/src-tauri/src/: lib.rs  main.rs
charger-firmware/: partitions.csv  platformio.ini
dashboard/: package.json
docs/: TESTER-GUIDE.md  index.md
docs-public/: index.md
mower/: decision_assistant.py  deploy.sh  install_hook.sh  label_relay.py  service_handlers.py  state_machine.py
nova-ota-device/: platformio.ini
novabot-dashboard/: index.html  package-lock.json  package.json
novabot-dns/: Dockerfile  docker-compose.yml  entrypoint.sh
novabot-server/: .gitignore  novabot.db-shm  novabot.db-wal  package-lock.json  package.json  tsconfig.json
open_decision/: robot_decision.py  service_handlers.py
open_node/: deploy.sh  mqtt_bridge.py  start.sh
opennovabot-app/: .easignore  App.tsx  app.json  eas.json  package-lock.json  package.json
(+1000 files in other folders)
