[package]
name = "opennovabot-setup"
version = "1.0.0"
description = "OpenNova Setup — Novabot provisioning tool"
edition = "2021"

[lib]
name = "opennovabot_setup_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time"] }
